<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_main"
    android:background="@android:color/background_light" >

    <ImageView android:id="@+id/business_image"
        android:src="@drawable/mac2"
        android:contentDescription="@string/image_content"
        app:layout_heightPercent="40%"
        app:layout_widthPercent="100%"
        style="@style/imageView" />
    <TextView android:id="@+id/business_title"
        android:text="@string/title"
        app:layout_widthPercent="100%"
        style="@style/title" />
    <View android:id="@+id/line1"
        app:layout_widthPercent="33%"
        style="@style/line1" />

    <View android:id="@+id/buffer1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="2%"
        style="@style/buffer" >
    </View>
    <View android:id="@+id/buffer2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="2%"
        style="@style/buffer" >
    </View>
    <View android:id="@+id/buffer4"
        app:layout_heightPercent="1%"
        app:layout_widthPercent="100%"
        style="@style/buffer4">
    </View>

    <Button android:id="@+id/business_facebook"
        android:text="@string/facebook"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="47%"
        style="@style/fButton" />

    <TextView android:id="@+id/business_hours"
        android:text="@string/hours"
        android:layout_above="@id/business_facebook"
        app:layout_widthPercent="100%"
        style="@style/smallText" />
    <TextView android:id="@+id/business_address"
        android:text="@string/address"
        android:layout_above="@id/business_hours"
        app:layout_widthPercent="100%"
        style="@style/smallText" />

    <View android:id="@+id/line2"
        app:layout_widthPercent="66%"
        android:layout_above="@id/business_address"
        style="@style/line2" />

    <LinearLayout android:id="@+id/business_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line1"
        android:layout_above="@id/line2">
        <TextView
            android:text="@string/description"
            style="@style/description" />
    </LinearLayout>

    <TextView android:id="@+id/buffer3"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/business_facebook"
        android:layout_toEndOf="@id/business_facebook"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="2%" />
    <Button android:id="@+id/business_call"
        android:text="@string/phone"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="47%"
        style="@style/cButton" />

</android.support.percent.PercentRelativeLayout>
